Fix birth date icon alignment.

--- a/src/assets/styling/source-card.scss
+++ b/src/assets/styling/source-card.scss
@@ -107,23 +107,22 @@
 .lls-source__person {
   font-size: 18px;
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 0;
-
-  @media(min-width: $breakpointMd) {
-    display: block;
-  }
 }
 
 .lls-source__person-name {
   margin-bottom: 0;
-
-  @media(max-width: $breakpointMd) {
-    margin-right: 10px;
-  }
+  margin-right: 0.75rem;
 }
 
 .lls-source__person-age {
   display: flex;
   align-items: center;
   margin-bottom: 0;
+
+  .lls-icon {
+    // Icon is a little off-center vertically, so we fix it with transform.
+    transform: translateY(1px);
+  }
 }
